# yoink

./: .gitignore  CHANGELOG.md  Dockerfile  README.md  docker-compose.yml  pyproject.toml
.github/workflows/: bump-and-release.yml  ci.yml  docker.yml  release.yml  test.yml
bench/: docker-compose.yml
bench/react/: index.html  nginx.conf  package.json  vite.config.js
bench/react/src/: App.jsx  Home.jsx  ProductDetail.jsx  ProductList.jsx  data.js
bench/slow/: Dockerfile  server.js
bench/static/: Dockerfile  generate.py  nginx.conf
docs/: ARCHITECTURE.md  FUTURE.md  IMPLEMENTATION.md  NEXT.md
examples/: custom_state.py  engine_pipeline.py  quickstart.py  scroll_and_scrape.py
scripts/: load_test.py
src/yoink/: __init__.py  __main__.py  actions.py  cli.py  common.py  config.py  core.py  engine.py  exceptions.py  logging.py  models.py  rate_limiter.py  reconciler.py  states.py  stealth.py  worker.py
src/yoink/drivers/: base.py  playwright.py  selenium.py
src/yoink/service/: app.py  auth.py  models.py  routes.py
tests/: conftest.py
tests/integration/: test_bench.py  test_engine.py  test_service.py
tests/unit/: test_actions.py  test_api.py  test_common.py  test_config.py  test_models.py  test_rate_limiter.py  test_reconciler.py  test_states.py  test_worker_retries.py
urls/: sample.txt
