[project]
name = "yoink"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
authors = [
    { name = "uhryniuk", email = "duhry99@gmail.com" }
]
requires-python = ">=3.12"
dependencies = [
    "tenacity",
    "PyYAML",
    "pytz",
    "playwright",
    "structlog",
    "beautifulsoup4",
    "python-pyper",
    "selenium",
    "requests",
    "pillow>=12.0.0",
]

[project.optional-dependencies]
service = [
    "fastapi>=0.115",
    "uvicorn[standard]>=0.34",
]

[dependency-groups]
dev = [
    "pyrefly>=0.38.2",
    "ruff>=0.14.2",
    "httpx>=0.28",
    "pytest>=8.3",
    "pytest-asyncio>=0.24",
    "pytest-cov>=6.0",
]

[tool.pytest.ini_options]
testpaths = ["tests"]
asyncio_mode = "auto"
addopts = "--tb=short -q"

[project.scripts]
yoink = "yoink.cli:main"
yk = "yoink.cli:main"

[build-system]
requires = ["uv_build>=0.9.9,<0.10.0"]
build-backend = "uv_build"

[tool.mypy]
check_untyped_defs = true
follow_imports = "silent"
warn_redundant_casts = "true"
warn_unused_ignores = "true"
exclude=[]

[tool.ruff]
line-length = 120

[tool.ruff.format]
docstring-code-format = true

[tool.ruff.lint]
extend-select = [
   #   "D",   # pydocstyle
  "I",   # isort
]

ignore = [
    "F403",  # 'from module import *' used; unable to detect undefined names
    "F405",  # Name may be undefined, or defined from star imports: module
]

[tool.ruff.lint.pydocstyle]
convention = "pep257"


