[project]
name = "yoink"
version = "0.1.2"
description = "Fast, fault-tolerant headless browser scraping at scale."
readme = "README.md"
authors = [
    { name = "uhryniuk", email = "duhry99@gmail.com" }
]
requires-python = ">=3.12"
dependencies = [
    "tenacity",
    "playwright",
    "structlog",
    "beautifulsoup4",
]

[project.optional-dependencies]
service = [
    "fastapi>=0.115",
    "uvicorn[standard]>=0.34",
]

[dependency-groups]
dev = [
    "pyrefly>=0.38.2",
    "ruff>=0.14.2",
    "httpx>=0.28",
    "pytest>=8.3",
    "pytest-asyncio>=0.24",
    "pytest-cov>=6.0",
    "fastapi>=0.135.1",
    "uvicorn[standard]>=0.41.0",
    "bump-my-version>=1.2.7",
]

[tool.pytest.ini_options]
testpaths = ["tests"]
asyncio_mode = "auto"
addopts = "--tb=short -q"

[project.scripts]
yoink = "yoink.cli:main"
yk = "yoink.cli:main"

[build-system]
requires = ["uv_build>=0.9.9,<0.10.0"]
build-backend = "uv_build"

[tool.mypy]
check_untyped_defs = true
follow_imports = "silent"
warn_redundant_casts = "true"
warn_unused_ignores = "true"
exclude=[]

[tool.ruff]
line-length = 120

[tool.ruff.format]
docstring-code-format = true

[tool.ruff.lint]
extend-select = [
   #   "D",   # pydocstyle
  "I",   # isort
]

ignore = [
    "F403",  # 'from module import *' used; unable to detect undefined names
    "F405",  # Name may be undefined, or defined from star imports: module
]

[tool.ruff.lint.pydocstyle]
convention = "pep257"

[tool.bumpversion]
current_version = "0.1.2"
parse = "(?P<major>\\d+)\\.(?P<minor>\\d+)\\.(?P<patch>\\d+)"
serialize = ["{major}.{minor}.{patch}"]
commit = true
tag = true
tag_name = "v{new_version}"
commit_args = ""
message = "chore: bump version {current_version} → {new_version}"

[[tool.bumpversion.files]]
filename = "pyproject.toml"
search = 'version = "{current_version}"'
replace = 'version = "{new_version}"'

[[tool.bumpversion.files]]
filename = "src/yoink/__init__.py"
search = '__version__ = "{current_version}"'
replace = '__version__ = "{new_version}"'


