[project]
name = "python-yoink"
version = "0.1.0"
description = "Fast, fault-tolerant headless browser scraping at scale."
readme = "README.md"
authors = [
    { name = "uhryniuk", email = "duhry99@gmail.com" }
]
requires-python = ">=3.12"
dependencies = [
    "tenacity",
    "playwright",
    "structlog",
    "beautifulsoup4",
    "httpx>=0.28.1",
]

[dependency-groups]
dev = [
    "pyrefly>=0.38.2",
    "ruff>=0.14.2",
    "pytest>=8.3",
    "pytest-asyncio>=0.24",
    "pytest-cov>=6.0",
]

[tool.pytest.ini_options]
testpaths = ["tests"]
asyncio_mode = "auto"
addopts = "--tb=short -q"

[project.scripts]
yoink = "yoink.cli:main"
yk = "yoink.cli:main"

[build-system]
requires = ["uv_build>=0.9.9"]
build-backend = "uv_build"

[tool.uv.build-backend]
module-name = "yoink"
source-exclude = ["bench/"]

[tool.mypy]
check_untyped_defs = true
follow_imports = "silent"
warn_redundant_casts = "true"
warn_unused_ignores = "true"
exclude=[]

[tool.ruff]
line-length = 120

[tool.ruff.format]
docstring-code-format = true

[tool.ruff.lint]
extend-select = [
   #   "D",   # pydocstyle
  "I",   # isort
]

ignore = [
    "F403",  # 'from module import *' used; unable to detect undefined names
    "F405",  # Name may be undefined, or defined from star imports: module
]

[tool.ruff.lint.pydocstyle]
convention = "pep257"

[tool.semantic_release]
version_toml = ["pyproject.toml:project.version"]
build_command = "uv lock --upgrade-package python-yoink && uv build"
tag_format = "v{version}"
allow_zero_version = true


